--- a/colsubsidio-front/src/app/components/nav-bar/nav-bar.component.html
+++ b/colsubsidio-front/src/app/components/nav-bar/nav-bar.component.html
@@ -1,29 +1,62 @@
-<nav class="navbar navbar-expand-lg bg-dark">
-    <div class="container-fluid">
-      <a routerLink="/" class="cursor-pointer">
-        <img class="navbar-brand"  src="../../../assets/img/colsubsidio.jpg" style="width: 80px; height: 60px; object-fit:scale-down;" alt="logo">
-      </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item" routerLinkActivate="active">
-            <a class="nav-link active" aria-current="page" routerLink="/">Home</a>
-          </li>
-          <li class="nav-item" routerLinkActivate="active">
-            <a class="nav-link active" aria-current="page" (click)="login.open()">Iniciar Sesion</a>
-          </li>
-          <li class="nav-item" routerLinkActivate="active">
-            <a class="nav-link active" aria-current="page" (click)="register.open()">Registrarse</a>
-          </li>
-        </ul>
-        <form class="d-flex" role="search">
+<nav class="navbar navbar-expand-sm bg-dark">
+  <div class="container-fluid">
+    <a routerLink="/" class="cursor-pointer">
+      <img
+        class="navbar-brand"
+        src="../../../assets/img/colsubsidio.jpg"
+        style="width: 80px; height: 60px; object-fit: scale-down"
+        alt="logo"
+      />
+    </a>
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-bs-toggle="collapse"
+      data-bs-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent"
+      aria-expanded="true"
+      aria-label="Toggle navigation"
+    >
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item" routerLinkActivate="active">
+          <a class="nav-link active" aria-current="page" routerLink="/">Home</a>
+        </li>
+
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Configuracion de la cuenta
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <li><a class="dropdown-item" href="#">Editar Informacion</a></li>
+            <li><a class="dropdown-item" href="#">Salir</a></li>
+          </ul>
+        </li>
+      </ul>
+      <ul class="d-flex mb-2 mb-lg-0">
+        <li class="nav-item" routerLinkActivate="active">
+          <a class="nav-link active" aria-current="page" (click)="login.open()"
+            >Iniciar Sesion</a
+          >
+        </li>
+        <li class="nav-item" routerLinkActivate="active">
+          <a
+            class="nav-link active"
+            aria-current="page"
+            (click)="register.open()"
+            >Registrarse</a
+          >
+        </li>
+      </ul>
+
+      <!--form class="d-flex" role="search">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
           <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>
-      </div>
+        </form-->
     </div>
-  </nav>
-  <app-base-modal #login [target]="'login'"></app-base-modal>
-  <app-base-modal #register [target]="'register'"></app-base-modal>
+  </div>
+</nav>
+<app-base-modal #login [target]="'login'"></app-base-modal>
+<app-base-modal #register [target]="'register'"></app-base-modal>
