--- a/colsubsidio-front/src/app/components/tabs/tabs.component.html
+++ b/colsubsidio-front/src/app/components/tabs/tabs.component.html
@@ -3,5 +3,7 @@
     <mdb-tab title="Movimientos de la Cuenta">
         <app-movement></app-movement>
     </mdb-tab>
-    <mdb-tab title="Informacion del cliente">Tab content 3</mdb-tab>
+    <mdb-tab title="Informacion del cliente">
+        <app-information-client></app-information-client>
+    </mdb-tab>
 </mdb-tabs>
