--- a/colsubsidio-front/src/app/app.component.html
+++ b/colsubsidio-front/src/app/app.component.html
@@ -1,3 +1,7 @@
 <app-nav-bar></app-nav-bar>
-<router-outlet></router-outlet>
+
+<div class="wrap" >
+    <router-outlet></router-outlet>
+</div>
+
 <app-footer></app-footer>
