--- a/colsubsidio-front/src/app/components/footer/footer.component.css
+++ b/colsubsidio-front/src/app/components/footer/footer.component.css
@@ -1,9 +1,10 @@
 .footer{
+    position: absolute;
     bottom:0%;
+    width: 100%;
+    height: 60px;
     background-color: grey;
     text-align: center;
     font-weight: bold;
     color: aliceblue;
-    width: 100%;
-    position: absolute;
 }
