integrando oauth2 en el angular app

--- a/colsubsidio-front/src/app/components/modal/base-modal/base-modal.component.html
+++ b/colsubsidio-front/src/app/components/modal/base-modal/base-modal.component.html
@@ -3,7 +3,7 @@
       <div>
         
         <app-register
-          *ngIf="target === 'register'"
+          *ngIf="target === 'createClient'"
           (cerrarModal)="modal.close()" 
           (studentUpdate)="testFunction($event)"        
         ></app-register>
