--- a/colsubsidio-front/src/app/components/modal/login/login.component.html
+++ b/colsubsidio-front/src/app/components/modal/login/login.component.html
@@ -19,7 +19,7 @@
           <input
             type="text"
             class="form-control"
-            formControlName="userName"
+            formControlName="username"
             aria-describedby="userName"
             placeholder="Usuario"
           />
