--- a/colsubsidio-front/src/app/components/modal/show-details-client/show-details-client.component.html
+++ b/colsubsidio-front/src/app/components/modal/show-details-client/show-details-client.component.html
@@ -13,7 +13,7 @@
             <div class="row row-cols-3">
                 <div class="col-sm-12">
                     <ul *ngIf="client" class="list-group text-dark mb-3">
-                        <li class="list-group-item active text-center">INFORMACION DEL ESTUDIANTE</li>
+                        <li class="list-group-item active text-center">INFORMACION DEL CLIENTE</li>
                         <li class="list-group-item text-center">{{client.fullName | uppercase}}</li>
                         <li class="list-group-item text-center">{{client.userName | uppercase}}</li>
                         <li class="list-group-item text-center">{{client.phone}}</li>
@@ -29,10 +29,10 @@
                   </div>-->
                   <div class="card">
                     <div class="card-header text-center">
-                        NOTAS DEL ESTUDIANTE
+                       DATOS DEL CLIENTE
                     </div>
                     <div class="alert alert-info" *ngIf="account.length == 0 && resp.length == 0">
-                      No hay informacion de notas
+                      NO HAY INFORMACION DEL CLIENTE
                     </div>
                     <!--ul class="list-group list-group-flush" *ngIf="question.length > 0 && resp.length > 0">
                       <li class="list-group-item active text-center">Examen {{client.exam?.id}}  Respuestas:</li>
