--- a/colsubsidio-front/src/app/pages/client/client.component.html
+++ b/colsubsidio-front/src/app/pages/client/client.component.html
@@ -43,7 +43,15 @@
 
     </div>
   </div>
-
+  <ngx-spinner
+  bdColor="rgba(51,51,51,0.8)"
+  size="medium"
+  color="#fff"
+  type="ball-scale-multiple"
+>
+  
+  <p style="font-size: 20px; color: white">Loading...</p></ngx-spinner
+>
   <div *ngIf="clients.length == 0;">
     <div class="alert alert-danger container" >
         <p>No hay clientes registrados en base de datos</p>
