--- a/colsubsidio-front/src/app/components/footer/footer.component.html
+++ b/colsubsidio-front/src/app/components/footer/footer.component.html
@@ -1,3 +1,53 @@
-<div class="footer pt-3" style="bottom: -100%;">
-    <p>&copy; {{name}}</p>
-</div>
+<footer>
+    <div class="d-md-none">
+      <div
+        class="
+          d-flex
+          align-items-center
+          justify-content-between
+          border-top
+          p-3
+          fixed-bottom
+          bg-white
+          d-none d-xs-block
+        "
+        style="height: 61px"
+      >
+        <a
+          class="btn btn-nav bg-white rounded-0 shadow-none p-1"
+          href="javascript:void(0)"
+          [routerLink]="['']"
+        >
+         
+        </a>
+        <!-- WITHOUT a channel created -->
+        <a
+          
+          class="btn btn-primary aldrich shadow-none rounded-0"
+          style="font-size: 14px; height: 34px; width: 135px"
+          href="javascript:void(0)"
+        >
+    sdgfsdfgffsd
+        </a>
+        <ng-template #created>
+          <a
+            class="btn btn-nav bg-white rounded-0 shadow-none p-1"
+            [routerLink]="['/dashboard']"
+          >
+            
+            />
+          </a>
+        </ng-template>
+        <a
+          class="btn btn-nav bg-white rounded-0 shadow-none p-1"
+          href="index.html"
+        >
+          <img
+            style="height: 24px"
+            src="../../../assets/images/followOFF_Black.svg"
+          />
+        </a>
+      </div>
+    </div>
+  </footer>
+ 
