--- a/colsubsidio-front/src/app/components/modal/edit-client/edit-client.component.html
+++ b/colsubsidio-front/src/app/components/modal/edit-client/edit-client.component.html
@@ -56,7 +56,7 @@
 
         <div class="mb-2 mt-5" style="height: 50px" >
             <input
-              [disabled]="true"
+              [disabled]=true
               type="password" 
               class="form-control exo text-field shadow-none"
               formControlName="password"
